--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 *.iml
 .gradle
-/local.properties
+local.properties
 .idea
 .DS_Store
-/build
+build
 */build
-/captures
+captures
 .externalNativeBuild
 .cxx
-local.properties
