--- a/habits/gradle.properties
+++ b/habits/gradle.properties
@@ -9,3 +9,7 @@ android.useAndroidX=true
 
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
+
+ktor_version=2.1.1
+kotlin_version=1.7.10
+logback_version=1.2.11
