--- a/habits/gradle.properties
+++ b/habits/gradle.properties
@@ -11,5 +11,7 @@ android.useAndroidX=true
 kotlin.mpp.enableCInteropCommonization=true
 
 ktor_version=2.1.1
-kotlin_version=1.7.10
+kotlin_version=1.6.10
 logback_version=1.2.11
+sqldelight_version=1.5.3
+store_version=4.0.5
