--- a/habits/gradle.properties
+++ b/habits/gradle.properties
@@ -10,6 +10,7 @@ android.useAndroidX=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 
+compose_version=1.1.0
 ktor_version=2.1.1
 kotlin_version=1.6.10
 logback_version=1.2.11
