Consume flow from iOS

--- a/habits/gradle.properties
+++ b/habits/gradle.properties
@@ -10,6 +10,8 @@ android.useAndroidX=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 
+kotlin.native.binary.memoryModel=experimental
+
 ktor_version=2.1.1
 kotlin_version=1.7.10
 logback_version=1.2.11
